fix codemagic config for testflight

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,6 +15,14 @@ workflows:
     triggering:
       events:
         - push
+    integrations:
+      app_store_connect: starfitinc2@gmail.com
+    publishing:
+      app_store_connect:
+        apple_id: $APPLE_ID
+        password: $APP_SPECIFIC_PASSWORD
+        submit_to_testflight: true
+        distribute_external: true
     ios:
       xcode: "16.2"
       scheme: "HiitFatBurner"
@@ -23,8 +31,3 @@ workflows:
       project_path: "."
       code_signing:
         automatic_signing: true
-    publishing:
-      app_store_connect:
-        apple_id: $APPLE_ID
-        app_specific_password: $APP_SPECIFIC_PASSWORD
-        distribute_external_testers: true
